# RaspberryPi-EtherCAT-Slave

./: README.md  SPI_Transmit.c  Stream_IMU_Data.cpp
1-StreamIMUData_to_RPI/: README.md
2-Demo_SPITransmit_RPI_to_EtherCatSlave/: Readme.md
2-Demo_SPITransmit_RPI_to_EtherCatSlave/soes/hal/raspberrypi-lan9252/: esc_hw.c
3-IMUData_RPI_to_EtherCatSlave/: Readme.md
3-IMUData_RPI_to_EtherCatSlave/application_TwoIMU/: CMakeLists.txt  getSensorData.cpp  getSensorData.h  main.c  slave_objectlist.c  utypes.h
3-IMUData_RPI_to_EtherCatSlave/applications/raspberry_lan9252demo/: getSensorData.cpp  getSensorData.h
3-IMUData_RPI_to_EtherCatSlave/soes/: ecat_slv.c
IMUDATA_SPI_EtherCatSlave/: Readme.md
IMUDATA_SPI_EtherCatSlave/applications/raspberry_lan9252demo/: CMakeLists.txt  lan9252_spi.c  main.c
IMUDATA_SPI_EtherCatSlave/soes/: ecat_slv.h
RPI_To_Lan9252/applications/raspberry_lan9252demo/: CMakeLists.txt
RPI_To_Lan9252/applications/raspberry_lan9252demo /: ecat_options.h  slave.xml
RPI_To_Lan9252_SPITransmit/: Readme.md
RPI_To_Lan9252_SPITransmit/applications/raspberry_lan9252demo/: SPI_Transmit.c
StreamData_to_RPI/: README.md
soes/hal/raspberrypi-lan9252/: esc_hw.c
